# pokemon-service

./: Cargo.toml  Dockerfile  README.md
src/: main.rs
src/endpoints/: mod.rs  tests.rs
src/model/: mod.rs
src/poke_api/: mod.rs  model.rs  tests.rs
src/services/: mod.rs  pokemon.rs  translation.rs
src/shakespeare_api/: mod.rs  model.rs  tests.rs
