[package]
name = "pokeservice"
version = "0.1.0"
authors = ["Greg Holland <greg.holland@swim.ai>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
lazy_static = "1.4.0"
regex = "1.4.5"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt"] }
tokio-stream = "0.1"
warp = "0.3"

